# takeout-maps

./: .gitignore  Makefile  Readme.MD  pyproject.toml
.github/workflows/: code-quality-and-tests.yaml
scripts/: build_shared.py  generate_schema.py
takeout_maps/: __main__.py  constants.py  exceptions.py  security.py  xsds.py
takeout_maps/api/: serving.py  utils.py
takeout_maps/api/serving/: __init__.py  common.py  fitbit.py  takeout.py
takeout_maps/api/takeout/: records.py  semantic_location_history.py  settings.py  takeout.py
takeout_maps/api/xsd/: gpx1_1.py  intermediate.py  tcxv2_2.py
takeout_maps/routes/: fitbit.py  takeout.py
takeout_maps/takeout/: __init__.py  index.py  models.py  paths.py  utils.py
web/: package-lock.json  package.json  tsconfig.json
web/src/: app.html  app.ts  stores.ts
web/src/lib/: common.ts  shared.ts  utils.ts
web/src/lib/components/: Activities.svelte  Connections.svelte  DatePicker.svelte  Map.svelte  Timeline.svelte  TimelineNavigation.svelte
web/src/lib/datasets/: polyline.ts  sampler.ts
web/src/lib/dates/: etl.ts  formatting.ts  utils.ts
web/src/lib/maps/: controls.ts  index.ts  layers.ts  timeline.css
web/src/routes/: +page.server.ts  styles.css
web/src/routes/explore/[year]/[month]/[day]/: +page.server.ts  +page.svelte
web/src/tests/: common_utils.test.ts  dates.test.ts
