[build-system]
requires = ["setuptools", "wheel"]

[project]
description = ""
dynamic = ["version"]
name = "takeout-maps"

authors = [{name = "Mahdi Lamb", email = "mahdilamb@gmail.com"}]
dependencies = [
  "loguru",
  "fastapi",
  "uvicorn[standard]",
  "pydantic-stream@git+https://github.com/mahdilamb/pydantic-stream",
    "fitbit-web@git+https://github.com/mahdilamb/fitbit-web"
]

[project.optional-dependencies]
dev = [
  "xsd-to-pydantic@git+https://github.com/mahdilamb/xsd-to-pydantic",
]
test = [
  "black",
  "isort",
  "mypy",
  "bandit",
  "pytest",
  "pytest-cov",
  "docformatter",
  "pydocstyle",
   "types-requests",
]
all = ["takeout-maps[test,dev]"]
[tool.setuptools]
packages = ["takeout_maps"]
[tool.setuptools.dynamic]
version = {attr = "takeout_maps.__version__"}

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.docformatter]
black = true
recursive = true

[tool.mypy]
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
  "test_*.py",
]
python_functions = ["*_test"]
testpaths = [
  "tests",
]
